--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -22,6 +22,12 @@
         <!-- ###+ symfony/swiftmailer-bundle ### -->
         <env name="MAILER_URL" value="null://localhost"/>
         <!-- ###- symfony/swiftmailer-bundle ### -->
+
+        <!-- ###+ knplabs/github-api ### -->
+        <env name="GITHUB_AUTH_METHOD" value="http_password"/>
+        <env name="GITHUB_USERNAME" value="username"/>
+        <env name="GITHUB_SECRET" value="password_or_token"/>
+        <!-- ###- knplabs/github-api ### -->
     </php>
 
     <testsuites>
