--- a/.env.dist
+++ b/.env.dist
@@ -21,3 +21,9 @@ DATABASE_URL=sqlite:///%kernel.project_dir%/var/data/blog.sqlite
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+
+###> knplabs/github-api ###
+GITHUB_AUTH_METHOD=http_password
+GITHUB_USERNAME=username
+GITHUB_SECRET=password_or_token
+###< knplabs/github-api ###
