--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "doctrine/orm": "^2.5.11",
         "erusev/parsedown": "^1.6",
         "ezyang/htmlpurifier": "^4.9",
-        "sensio/framework-extra-bundle": "^5.0",
+        "knplabs/github-api": "^2.7",
+        "php-http/guzzle6-adapter": "^1.1",
+        "sensio/framework-extra-bundle": "^5.1",
         "sensiolabs/security-checker": "^4.1",
         "symfony/asset": "^4.0",
         "symfony/expression-language": "^4.0",
